# stats-utility-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  package-lock.json  package.json
.github/: pull_request_template.md  ruleset-main.json
.github/workflows/: ci.yml
apps/backend/: .dockerignore  .eslintrc.json  Dockerfile  backend.Dockerfile  jest.config.js  jest.config.ts  package-lock.json  package.json  server.mjs  tsconfig.build.json  tsconfig.json
apps/frontend/: .env_example  .eslintrc.json  Dockerfile  eslint.config.js  frontend.Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/plots_py/: Dockerfile  main.py  models.py  package.json  plots_py.Dockerfile  (+1 more)
apps/stats_rs/: Cargo.toml  Dockerfile  rust-toolchain.toml  stats_rs.Dockerfile
apps/stats_rs/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs  stats.rs  types.rs
apps/stats_rs/src/routes/: describe.rs  docs.rs  health.rs  mod.rs  prom.rs  schemas.rs  stats_binrule.rs  stats_corr_matrix.rs  stats_distribution.rs  stats_ecdf.rs  stats_normalize.rs  stats_outliers.rs  stats_pairwise.rs  stats_qq.rs  stats_summary.rs
apps/stats_rs/src/stats/: basic.rs  cluster.rs  corr.rs  drift.rs  info.rs  mod.rs  online.rs  preprocess.rs  rag.rs  robust.rs  utils.rs  vector.rs
apps/stats_rs/tests/: http.rs
docker/: .env_sample  docker-compose.test.yml  docker-compose.yml
docs/: api.md  architecture.md  backend.md  database.md  docker.md  frontend.md  plots_py.md  stats_rs.md  testing_reliability.md
(+23 files in other folders)
