[package]
name = "stats_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread","macros"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.143"
schemars = { version = "1.0.4", features = ["derive"] }
thiserror = "2.0.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
csv = "1.3"

[dev-dependencies]
tower = "0.5"
http-body-util = "0.1"

